--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <!-- Favicon Icon -->
-        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+        <link rel="shortcut icon" type="image/x-icon" href="img/Kala Image/icon-terang-putih.png">
         
         <!-- All css here -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
