--- a/index.html
+++ b/index.html
@@ -160,70 +160,74 @@
         </section>
         <!-- Service Area End -->
         <!-- blog area start -->
-        <div id="blog" class="blog-area three text-center mb-100 pb-100">
+        <div id="blog" class="blog-area three text-center pt-100 pb-65">
             <div class="container">
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-lg-8 offset-lg-2">
                         <div class="blog-title text-center">
                             <h3>our news blog</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="single-blog">
-                            <div class="single-blog-img">
-                                <a href="blog-details.html"><img src="img/blog/blog1.jpg" alt="blog"></a>
-                                <div class="blog-hover">
-                                    <a href="blog-details.html"><i class="ti-link"></i></a>
-                                </div>
+                </div> -->
+                <!-- Pricing Area -->
+                <div class="row">
+                    <div class="col-lg-4 col-md-7">
+                        <div class="single-pricing-tabel text-center">
+                            <div class="table-head">
+                                <h4>Basic Plan</h4>
+                                <h2>$70</h2>
                             </div>
-                            <div class="single-blog-content text-start">
-                                <h3><a href="blog-details.html">smart technology</a></h3>
-                                <p>Lorem ipsum dolor sit amet codo eiusmodtem mndes.hatbj gaera hziy baaretr.</p>
+                            <div class="table-body">
                                 <ul>
-                                    <li><i class="ti-eye"></i>600</li>
-                                    <li><i class="ti-tag"></i>450</li>
+                                    <li>web design</li>
+                                    <li>graphic design</li>
+                                    <li>web development</li>
+                                    <li class="line">design development</li>
+                                    <li class="line">app design</li>
+                                    <li class="purchase"><a href="#">purchase now</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="single-blog">
-                            <div class="single-blog-img">
-                                <a href="blog-details.html"><img src="img/blog/blog2.jpg" alt="blog"></a>
-                                <div class="blog-hover">
-                                    <a href="blog-details.html"><i class="ti-link"></i></a>
-                                </div>
+                        <div class ="single-pricing-tabel text-center">
+                            <div class="table-head">
+                                <h4>Special Plan</h4>
+                                <h2>$100</h2>
                             </div>
-                            <div class="single-blog-content text-start">
-                                <h3><a href="blog-details.html">smart technology</a></h3>
-                                <p>Lorem ipsum dolor sit amet codo eiusmodtem mndes.hatbj gaera hziy baaretr.</p>
+                            <div class="table-body">
                                 <ul>
-                                    <li><i class="ti-eye"></i>600</li>
-                                    <li><i class="ti-tag"></i>450</li>
+                                    <li>web design</li>
+                                    <li>graphic design</li>
+                                    <li>web development</li>
+                                    <li class="line">design development</li>
+                                    <li class="line">app design</li>
+                                    <li class="purchase"><a href="#">purchase now</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
-                        <div class="single-blog">
-                            <div class="single-blog-img">
-                                <a href="blog-details.html"><img src="img/blog/blog3.jpg" alt="blog"></a>
-                                <div class="blog-hover">
-                                    <a href="blog-details.html"><i class="ti-link"></i></a>
-                                </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="single-pricing-tabel text-center">
+                            <div class="table-head">
+                                <h4>Standard Plan</h4>
+                                <h2>$90</h2>
                             </div>
-                            <div class="single-blog-content text-start">
-                                <h3><a href="blog-details.html">smart technology</a></h3>
-                                <p>Lorem ipsum dolor sit amet codo eiusmodtem mndes.hatbj gaera hziy baaretr.</p>
+                            <div class="table-body">
                                 <ul>
-                                    <li><i class="ti-eye"></i>600</li>
-                                    <li><i class="ti-tag"></i>450</li>
+                                    <li>web design</li>
+                                    <li>graphic design</li>
+                                    <li>web development</li>
+                                    <li class="line">design development</li>
+                                    <li class="line">app design</li>
+                                    <li class="purchase"><a href="#">purchase now</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- End Pricing Area -->
             </div>
         </div>
         <!-- Blog area end -->
