--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,8 @@
     <![endif]-->
         <!-- Header Area Start -->
         <div id="header-area" class="header-area">
-            <!--<div class="container">-->
+            <!--<div class="
+                ">-->
             <!--<div class="row">-->
             <!--<div class="col-12">
         <a href="index.html" class="logo float-left"><img src="img/logo/logo.png" alt="logo"></a>-->
