--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <!-- Favicon Icon -->
-        <link rel="shortcut icon" type="image/x-icon" href="img/Kala Image/icon-terang-putih.png">
+        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
         
         <!-- All css here -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -83,24 +83,6 @@
             </div>
         </section>
         <!-- About us Section  -->
-        <!-- <section class="about-area three">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 offset-lg-12">
-                        <div class="who-content" align="center">
-                            <h3>about us </h3>
-                            <p>
-                                Kami adalah pilihan utama bagi Anda yang menghargai kualitas dan profesionalisme dalam layanan bisnis. Kami percaya bahwa menjaga kepercayaan klien adalah kunci kesuksesan, dan itulah mengapa kami selalu berkomitmen untuk memberikan pelayanan yang berkualitas dan profesional.
-                            </p>
-                            <p>
-                                Kami bukan hanya penyedia layanan biasa. Kami adalah mitra dalam pertumbuhan bisnis Anda, dengan fokus pada memberikan solusi yang kreatif dan solutif untuk meningkatkan brand awareness Anda. Kami mengerti bahwa setiap bisnis unik, dan itulah mengapa kami memberikan perhatian khusus untuk memahami kebutuhan bisnis Anda dan tujuan Anda.
-                            </p>
-                            <a href="#" class="default-btn">read more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
         <div id="blog" class="blog-area three text-center">
             <div class="container">
                 <div class="row">
@@ -162,30 +144,31 @@
         <!-- blog area start -->
         <div id="blog" class="blog-area three text-center pt-100 pb-65">
             <div class="container">
-                <!-- <div class="row">
+                <div class="row">
                     <div class="col-lg-8 offset-lg-2">
                         <div class="blog-title text-center">
-                            <h3>our news blog</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit</p>
+                            <br>
+                            <h3>Our Package</h3>
                         </div>
                     </div>
-                </div> -->
-                <!-- Pricing Area -->
+                </div>
                 <div class="row">
                     <div class="col-lg-4 col-md-7">
                         <div class="single-pricing-tabel text-center">
                             <div class="table-head">
-                                <h4>Basic Plan</h4>
-                                <h2>$70</h2>
+                                <h4>Bronze</h4>
+                                <h2>Special Price</h2>
                             </div>
                             <div class="table-body">
                                 <ul>
-                                    <li>web design</li>
-                                    <li>graphic design</li>
-                                    <li>web development</li>
-                                    <li class="line">design development</li>
-                                    <li class="line">app design</li>
-                                    <li class="purchase"><a href="#">purchase now</a></li>
+                                    <li>7 Konten Feed Single Image</li>
+                                    <li>1 Feed Carousel</li>
+                                    <li>1 Video Reels</li>
+                                    <li>Ide & Konsep Konten</li>
+                                    <li>1x Revisi</li>
+                                    <li>FREE Riset Hashtag</li>
+                                    <li>FREE Copywriting</li>
+                                    <li class="purchase"><a href="https://api.whatsapp.com/send?phone=6282226647322" target="_blank">purchase now</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -193,17 +176,22 @@
                     <div class="col-lg-4 col-md-6">
                         <div class ="single-pricing-tabel text-center">
                             <div class="table-head">
-                                <h4>Special Plan</h4>
-                                <h2>$100</h2>
+                                <h4>Silver</h4>
+                                <h2>Special Price</h2>
                             </div>
                             <div class="table-body">
                                 <ul>
-                                    <li>web design</li>
-                                    <li>graphic design</li>
-                                    <li>web development</li>
-                                    <li class="line">design development</li>
-                                    <li class="line">app design</li>
-                                    <li class="purchase"><a href="#">purchase now</a></li>
+                                    <li>10 Konten Story</li>
+                                    <li>10 Konten Feed Single Image</li>
+                                    <li>3 Feed Carousel</li>
+                                    <li>2 Video Reels</li>
+                                    <li>Ide & Konsep Konten</li>
+                                    <li>2x Revisi</li>
+                                    <li>FREE Riset Hashtag</li>
+                                    <li>FREE Copywriting</li>
+                                    <li>FREE Schedule Posting</li>
+                                    <li>FREE Admin Posting</li>
+                                    <li class="purchase"><a href="https://api.whatsapp.com/send?phone=6282226647322" target="_blank">purchase now</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -212,16 +200,21 @@
                         <div class="single-pricing-tabel text-center">
                             <div class="table-head">
                                 <h4>Standard Plan</h4>
-                                <h2>$90</h2>
+                                <h2>Special Price</h2>
                             </div>
                             <div class="table-body">
                                 <ul>
-                                    <li>web design</li>
-                                    <li>graphic design</li>
-                                    <li>web development</li>
-                                    <li class="line">design development</li>
-                                    <li class="line">app design</li>
-                                    <li class="purchase"><a href="#">purchase now</a></li>
+                                    <li>15 Konten Story</li>
+                                    <li>21 Konten Feed Single Image</li>
+                                    <li>6 Konten Feed Carousel</li>
+                                    <li>3 Video Reels</li>
+                                    <li>Ide & Konsep Konten</li>
+                                    <li>Revisi 2x/konten</li>
+                                    <li>FREE Riset Hastag</li>
+                                    <li>FREE Copywriting</li>
+                                    <li>FREE Schedule Posting</li>
+                                    <li>FREE Admin Posting</li>
+                                    <li class="purchase"><a href="https://api.whatsapp.com/send?phone=6282226647322" target="_blank">purchase now</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -237,8 +230,9 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="portfolio-title">
-                            <h2>our portfolio works</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit</p>
+                            <h2>Our Portofolio Works</h2>
+                            <p>Kami Berpengalaman Dalam Dunia Digital Marketing
+                            </p>
                         </div>
                     </div>
                 </div>
