--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <!-- Favicon Icon -->
-        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+        <link rel="shortcut icon" type="image/x-icon" href="img/Kala Image/icon-terang-putih.png">
         
         <!-- All css here -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -157,6 +157,7 @@
                         <div class="single-pricing-tabel text-center">
                             <div class="table-head">
                                 <h4>Bronze</h4>
+                                <h3><s>Rp 1.300.000</s></h3>
                                 <h2>Special Price</h2>
                             </div>
                             <div class="table-body">
@@ -168,6 +169,9 @@
                                     <li>1x Revisi</li>
                                     <li>FREE Riset Hashtag</li>
                                     <li>FREE Copywriting</li>
+                                    <li class="line">Konten Story</li>
+                                    <li class="line">Free Schedule Posting</li>
+                                    <li class="line">Free Admin Posting</li>
                                     <li class="purchase"><a href="https://api.whatsapp.com/send?phone=6282226647322" target="_blank">purchase now</a></li>
                                 </ul>
                             </div>
@@ -177,6 +181,7 @@
                         <div class ="single-pricing-tabel text-center">
                             <div class="table-head">
                                 <h4>Silver</h4>
+                                <h3><s>Rp 2.500.000</s></h3>
                                 <h2>Special Price</h2>
                             </div>
                             <div class="table-body">
@@ -199,7 +204,8 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="single-pricing-tabel text-center">
                             <div class="table-head">
-                                <h4>Standard Plan</h4>
+                                <h4>Gold</h4>
+                                <h3><s>Rp 5.000.000</s></h3>
                                 <h2>Special Price</h2>
                             </div>
                             <div class="table-body">
