price web sales page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="#slider">Home</a></li>
                     <li><a href="#about-us">About Us</a></li>
                     <li><a href="#service">Service</a></li>
-                    <li><a href="#package">Package</a></li>
+                    <li><a href="price.html">Package</a></li>
                     <li><a href="portfolio.html">Portofolio</a></li>
                 </ul>
             </div>
@@ -102,7 +102,7 @@
             </div>
         </div>
         <!-- Service Start -->
-        <section id="service" class="service-area three pt-100 pb-100 text-center">
+        <section id="service" class="service-area three pt-100 pb-100 pr-40 pl-40 text-center">
             <div class="row">
                 <div class="col-12">
                     <div class="portfolio-title">
@@ -113,10 +113,10 @@
             <div class="container">
                 <div class="single-service-three">
                     <div class="single-service-icon-three">
-                        <a href="#"><img src="img/icon/icon5.png" alt=""></a>
+                        <a href="price.html"><img src="img/icon/icon5.png" alt=""></a>
                     </div>
                     <div class="single-service-content-three">
-                        <h4><a href="#">Web Design and Development</a></h4>
+                        <h4><a href="price.html">Web Design and Development</a></h4>
                         <p>Kami membantu anda untuk merancang website yang berguna untuk keberlangsungan bisnis anda.</p>
                     </div>
                 </div>
@@ -142,93 +142,7 @@
         </section>
         <!-- Service Area End -->
         <!-- blog area start -->
-        <div id="blog" class="blog-area three text-center pt-100 pb-65">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 offset-lg-2">
-                        <div class="blog-title text-center">
-                            <br>
-                            <h3>Our Package</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-7">
-                        <div class="single-pricing-tabel text-center">
-                            <div class="table-head">
-                                <h4>Bronze</h4>
-                                <h3><s>Rp 1.300.000</s></h3>
-                                <h2>Special Price</h2>
-                            </div>
-                            <div class="table-body">
-                                <ul>
-                                    <li>7 Konten Feed Single Image</li>
-                                    <li>1 Feed Carousel</li>
-                                    <li>1 Video Reels</li>
-                                    <li>Ide & Konsep Konten</li>
-                                    <li>1x Revisi</li>
-                                    <li>FREE Riset Hashtag</li>
-                                    <li>FREE Copywriting</li>
-                                    <li class="line">Konten Story</li>
-                                    <li class="line">Free Schedule Posting</li>
-                                    <li class="line">Free Admin Posting</li>
-                                    <li class="purchase"><a href="https://api.whatsapp.com/send?phone=6282226647322" target="_blank">purchase now</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class ="single-pricing-tabel text-center">
-                            <div class="table-head">
-                                <h4>Silver</h4>
-                                <h3><s>Rp 2.500.000</s></h3>
-                                <h2>Special Price</h2>
-                            </div>
-                            <div class="table-body">
-                                <ul>
-                                    <li>10 Konten Story</li>
-                                    <li>10 Konten Feed Single Image</li>
-                                    <li>3 Feed Carousel</li>
-                                    <li>2 Video Reels</li>
-                                    <li>Ide & Konsep Konten</li>
-                                    <li>2x Revisi</li>
-                                    <li>FREE Riset Hashtag</li>
-                                    <li>FREE Copywriting</li>
-                                    <li>FREE Schedule Posting</li>
-                                    <li>FREE Admin Posting</li>
-                                    <li class="purchase"><a href="https://api.whatsapp.com/send?phone=6282226647322" target="_blank">purchase now</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="single-pricing-tabel text-center">
-                            <div class="table-head">
-                                <h4>Gold</h4>
-                                <h3><s>Rp 5.000.000</s></h3>
-                                <h2>Special Price</h2>
-                            </div>
-                            <div class="table-body">
-                                <ul>
-                                    <li>15 Konten Story</li>
-                                    <li>21 Konten Feed Single Image</li>
-                                    <li>6 Konten Feed Carousel</li>
-                                    <li>3 Video Reels</li>
-                                    <li>Ide & Konsep Konten</li>
-                                    <li>Revisi 2x/konten</li>
-                                    <li>FREE Riset Hastag</li>
-                                    <li>FREE Copywriting</li>
-                                    <li>FREE Schedule Posting</li>
-                                    <li>FREE Admin Posting</li>
-                                    <li class="purchase"><a href="https://api.whatsapp.com/send?phone=6282226647322" target="_blank">purchase now</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- End Pricing Area -->
-            </div>
-        </div>
+        
         <!-- Blog area end -->
         <!-- Portfolio Area Start -->
         <section id="portfolio" class="portfolio-area overflow-hidden three mt-135 mb-100 pt-90 pb-100 text-center">
@@ -247,7 +161,7 @@
                         <img src="img/portfolio/portfolio5.jpg" alt="project" />
                         <div class="portfolio-hover">
                             <ul>
-                                <li><a class="image-popup" href="img/portfolio/portfolio5.jpg"><span class="ti-camera"></span></a></li>
+                                <li><a class="image-popup" href="img/banner/foto2.jpg"><span class="ti-camera"></span></a></li>
                             </ul>
                             <h3>portfolio title goes here</h3>
                             <p>Portfolio work name here</p>
@@ -257,7 +171,7 @@
                         <img src="img/portfolio/portfolio6.jpg" alt="project" />
                         <div class="portfolio-hover">
                             <ul>
-                                <li><a class="image-popup" href="img/portfolio/portfolio6.jpg"><span class="ti-camera"></span></a></li>
+                                <li><a class="image-popup" href="img/banner/vio.jpg"><span class="ti-camera"></span></a></li>
                             </ul>
                             <h3>portfolio title goes here</h3>
                             <p>Portfolio work name here</p>
